@@ -22,6 +22,8 @@ FTB 0
 TC FFFFFF
 #(Set text back color; 0xRRGGBB)
 TBC 000000
+#(Set text effect; Traced, None, others when added)
+TE TRACED
 
 #(************ Title Screen ******************************************)
 
