@@ -1,4 +1,5 @@
 Changes towards version 0.7:
+- Added presentaion commands TEXT, TE (text effect), MOVIE - Alex
 - Increased the size of display queue (elements were sometimes missing
   in e.g. Nemesis vs. Nemesis battles with many marines out) - Alex
 - ShowPresentation() no longer clears the screen by force; presentations
